Firefox seems to no longer support box-pack/align, so best add flexbox.

--- a/css/screen.less
+++ b/css/screen.less
@@ -149,6 +149,9 @@ em {
     -moz-box-align: center;
     box-pack: center;
     box-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     opacity: 0;
     -webkit-transform: scale(1.25);
